<resources>
    <string name="app_name">NaBon-2.0</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="city_filter">Filter for a city</string>
    <string name="name_filter">Filter for a name</string>
    <string name="min_price">Min. price:</string>
    <string name="max_price">Max. price:</string>
    <string name="discard">Discard</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
</resources>
