<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.nik_sch.nabon_20.restaurantlist.FilterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name_filter"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/city_filter"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp">

            <TextView
                android:id="@+id/price_min_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/price_minimum"
                android:text="@string/min_price"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/price_minimum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_min_text"
                android:layout_marginStart="20dp"
                android:inputType="number"
                android:text="0.00"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/price_minimum"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/price_minimum"
                android:text="EUR"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/price_max_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/price_maximum"
                android:text="@string/max_price"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/price_maximum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price_max_text"
                android:layout_toStartOf="@id/euro2"
                android:inputType="number"
                android:text="4.37"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/euro2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/price_maximum"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:text="EUR"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginEnd="10dp"
            android:text="@string/discard"
            android:background="@drawable/rounded_corner"
            android:textSize="13sp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:layout_marginStart="10dp"
            android:text="@string/apply"
            android:background="@drawable/rounded_corner"
            android:textSize="13sp"/>
    </LinearLayout>
</RelativeLayout>